# RayTracer

./: .gitignore  README.md
engine/: CMakeLists.txt  run.bat
engine/source/: CMakeLists.txt  main.cpp
engine/source/core/: Hittable.h
engine/source/core/math/: Color.cpp  Color.h  Interval.cpp  Interval.h  Matrix.cpp  Matrix.h  Random.h  Vector.cpp  Vector.h  mathcommon.h  mathlib.h
engine/source/core/math/noise/: Perlin.h
engine/source/framework/scene/: Scene.h
engine/source/geometry/: BVH.cpp  BVH.h  Bounds.cpp  Bounds.h  Box.h  ConstantMedium.h  Geometry.h  Mesh.cpp  Mesh.h  Quad.h  Sphere.h  Transform.h  Triangle.h  primitives.h
engine/source/geometry/util/: MeshLoader.cpp  MeshLoader.h
engine/source/material/: Dielectric.h  DiffuseLight.h  Isotropic.h  Lambert.h  Material.h  Metal.h  materials.h
engine/source/render/: Camera.cpp  Camera.h  Lights.cpp  Lights.h  Texture.cpp  Texture.h  pdf.h  ray.h
